--- a/src/app/lista-nozze/lista-nozze.component.html
+++ b/src/app/lista-nozze/lista-nozze.component.html
@@ -1,27 +1,26 @@
 <div class="titolo">
-  <div class="separatore green2">
+  <div class="separatore green2" fxHide.xs>
     <span class="dot"></span>
     <span class="dot"></span>
     <span class="dot"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
+    <span class="dot" fxHide.sm></span>
+    <span class="dot" fxHide.sm></span>
+    <span class="dot" fxHide.sm></span>
+    <span class="dot" fxHide.sm></span>
+    <span class="dot" fxHide.sm></span>
   </div>
   <span class="text">Lista Nozze</span>
-  <div class="separatore green2">
+  <div class="separatore green2" fxHide.xs>
     <span class="dot"></span>
     <span class="dot"></span>
     <span class="dot"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
+    <span class="dot" fxHide.sm></span>
+    <span class="dot" fxHide.sm></span>
+    <span class="dot" fxHide.sm></span>
+    <span class="dot" fxHide.sm></span>
+    <span class="dot" fxHide.sm></span>
   </div>
 </div>
-
 
 <!--<div>
   <button [routerLink]="'/listanozze/lista'">Lista</button>
@@ -47,7 +46,7 @@
 
 </div>-->
 
-<div class="child-page-listing">
+
 
 
 
@@ -60,8 +59,9 @@
 
       <div class="location-image">
       <!--  <img src="assets/images/stendino.jpeg" >-->
-              <img  src="assets/images/lista/stendino.jpg" class="immagine" alt="Stendino">
-
+              <div class="cropped ">
+              <img  src="assets/images/lista/stendino.jpg"  alt="Stendino">
+              </div>
 
       </div>
 
@@ -73,8 +73,9 @@
         160 €     </a>
 
       <div class="location-image">
-        <a >
-          <img  src="assets/images/lista/microonde.jpg" alt="microonde">  </a>
+        <div class="cropped ">
+          <img  src="assets/images/lista/microonde.jpg" alt="microonde">
+        </div>
 
       </div>
 
@@ -86,9 +87,9 @@
         180 €            </a>
 
       <div class="location-image">
-        <a >
-          <img  src="assets/images/lista/valigia.jpg" alt="valigia">  </a>
-
+        <div class="cropped ">
+          <img  src="assets/images/lista/valigia.jpg" alt="valigia">
+        </div>
       </div>
 
     </article>
@@ -99,9 +100,9 @@
         60 €            </a>
 
       <div class="location-image">
-        <a >
-          <img  src="assets/images/lista/moka.jpg" alt="moka">  </a>
-
+        <div class="cropped ">
+          <img  src="assets/images/lista/moka.jpg" alt="moka">
+          </div>
       </div>
 
     </article>
@@ -112,9 +113,9 @@
         25 €          </a>
 
       <div class="location-image">
-        <a >
-          <img  src="assets/images/lista/bilancia.png" alt="bilancia">    </a>
-
+        <div class="cropped ">
+          <img  src="assets/images/lista/bilancia.png" alt="bilancia">
+        </div>
       </div>
 
     </article>
@@ -125,9 +126,9 @@
         350 €           </a>
 
       <div class="location-image">
-        <a >
+        <div class="cropped ">
           <img  src="assets/images/lista/piatti.png" alt="piatti">
-        </a>
+        </div>
       </div>
 
     </article>
@@ -137,9 +138,9 @@
         350 €           </a>
 
       <div class="location-image">
-        <a >
+        <div class="cropped ">
           <img src="assets/images/lista/pentole.png" alt="pentole">
-        </a>
+        </div>
       </div>
 
     </article>
@@ -150,9 +151,9 @@
         50 €           </a>
 
       <div class="location-image">
-        <a >
+        <div class="cropped ">
           <img  src="assets/images/lista/mestoli.jpg" alt="mestoli">
-        </a>
+        </div>
       </div>
 
     </article>
@@ -162,9 +163,9 @@
         130 €            </a>
 
       <div class="location-image">
-        <a >
+        <div class="cropped ">
           <img src="assets/images/lista/primer.jpg" alt="primer">
-        </a>
+        </div>
       </div>
 
     </article>
@@ -174,9 +175,9 @@
         360 €           </a>
 
       <div class="location-image">
-        <a >
+        <div class="cropped ">
           <img  src="assets/images/lista/consolle%20tavolo.jpg" alt="console">
-        </a>
+        </div>
       </div>
 
     </article>
@@ -186,9 +187,9 @@
         100 €           </a>
 
       <div class="location-image">
-        <a >
+        <div class="cropped ">
           <img  src="assets/images/lista/aspirapolvere.jpeg" alt="aspirapolvere">
-        </a>
+        </div>
       </div>
 
     </article>
@@ -198,9 +199,9 @@
         1500 €           </a>
 
       <div class="location-image">
-        <a >
+        <div class="cropped ">
           <img  src="assets/images/lista/divano.jpg" alt="divano">
-        </a>
+        </div>
       </div>
 
     </article>
@@ -210,9 +211,9 @@
         80 €          </a>
 
       <div class="location-image">
-        <a >
+        <div class="cropped ">
           <img  src="assets/images/lista/giardino.jpg" alt="giardino">
-        </a>
+        </div>
       </div>
 
     </article>
@@ -222,9 +223,9 @@
         50 €           </a>
 
       <div class="location-image">
-        <a >
+        <div class="cropped ">
           <img  src="assets/images/lista/calici.jpg" alt="calici">
-        </a>
+        </div>
       </div>
 
     </article>
@@ -234,9 +235,9 @@
         80 €            </a>
 
       <div class="location-image">
-        <a >
+        <div class="cropped ">
           <img  src="assets/images/lista/tovaglia.jpg" alt="tovaglia">
-        </a>
+        </div>
       </div>
 
     </article>
@@ -244,9 +245,7 @@
   </div>
   <!-- end grid container -->
 
-  <div class="container">
 
-  </div>
   <div class="container2">
 
 
@@ -291,16 +290,18 @@
     <div class="container">
 
     <div class="titoloCon">
-      <div class="separatore green2">
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
+      <div class="separatore green2 fxHide.xs">
+        <span class="dot" fxHide.sm></span>
+        <span class="dot" fxHide.sm></span>
+        <span class="dot" fxHide.sm></span>
+
       </div>
       <span class="text">Come Contribuire? </span>
-      <div class="separatore green2">
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
+      <div class="separatore green2 fxHide.xs">
+        <span class="dot" fxHide.sm></span>
+        <span class="dot" fxHide.sm></span>
+        <span class="dot" fxHide.sm></span>
+
       </div>
     </div>
     </div>
@@ -325,7 +326,8 @@
   </div>
   </div>
 </div>
-</div>
+
+
 
 
 
