--- a/src/app/lista-nozze/lista-nozze.component.html
+++ b/src/app/lista-nozze/lista-nozze.component.html
@@ -250,26 +250,22 @@
 
 
   <div class="titoloBis">
-    <div class="separatore green2">
-      <span class="dot"></span>
-      <span class="dot"></span>
-      <span class="dot"></span>
-      <span class="dot"></span>
-      <span class="dot"></span>
+    <div class="separatore green2 fxHide.xs">
+      <span class="dot" fxHide.sm></span>
+      <span class="dot" fxHide.sm></span>
+      <span class="dot" fxHide.sm></span>
       <span class="dot"></span>
       <span class="dot"></span>
       <span class="dot"></span>
     </div>
     <span class="textBis">Viaggio</span>
-    <div class="separatore green2">
+    <div class="separatore green2 fxHide.xs">
       <span class="dot"></span>
       <span class="dot"></span>
       <span class="dot"></span>
-      <span class="dot"></span>
-      <span class="dot"></span>
-      <span class="dot"></span>
-      <span class="dot"></span>
-      <span class="dot"></span>
+      <span class="dot" fxHide.sm></span>
+      <span class="dot" fxHide.sm></span>
+      <span class="dot" fxHide.sm></span>
     </div>
 
   </div>
