--- a/src/app/lista-nozze/lista-nozze.component.scss
+++ b/src/app/lista-nozze/lista-nozze.component.scss
@@ -475,25 +475,42 @@ h2 {
 
 
 @media only screen and (max-width: 500px) {
-
+  .location-listing{
+    width: 82%;
+  }
+.location-title{
+  width: 58%;
+  margin-left: 24%;
+}
   .location-image{
-
+    width: 58%;
+    margin-left: 24%;
     .imgageMob{
       width: 300px;
     }
   }
 .descrizione{
-  font-size: 14px;
-  width: 88%;
+  font-size: 11px;
+  width: 129%;
+  margin-left: -16%;
+  text-align: left;
   .banca{
-    font-size: 14px;
-    margin-left: -20%;
+    font-size: 11px;
+    margin-left: 0%;
+    margin-right: 2%;
+    padding-top: 0rem;
   }
 }
+  .titoloBis{
+    width: 89%;
+    .separatore{
+      width: 26%;
+    }
+  }
   .titolo {
     .text {
 
-      font-size: 53px;
+      font-size: 41px;
       line-height: 87%;
       margin: 11px 53px;
     }
@@ -516,37 +533,46 @@ h2 {
   }
 
   .imageBis {
-
-    height: 400px;
+    width: 75%;
+    padding-bottom: 103%;
+    margin-left: 13%;
 
   }
 
   .image {
-    width: 82%;
-    margin-top:145%;
+    width: 108%;
+    margin-top: 9%;
     margin-left: -8%;
   }
   .button {
-    margin: 0px -34px;
+    margin: -46px 3px;
     font-size: 12px;
   }
   .t2{
-    font-size: 20px;
+    font-size: 16px;
+    padding-top: 3%;
+    width: 82%;
+    line-height: 24px;
+    padding-bottom: 0rem;
+    height: 252px;
   }
   .container{
     width: 73%;
   }
   .container2{
-    padding-bottom: 58rem;
+    width: 100%;
+    height: 70%;
   }
   .cropped {
-    width: 330px;
-    height: 399px;
+    width: 205px;
+    height: 400px;
     overflow: hidden;
+
 
   }
 
   .cropped img {
+    width:135%;
     margin: -20px 0px 0px -87px;
   }
 }
