--- a/src/app/info/info.component.html
+++ b/src/app/info/info.component.html
@@ -84,8 +84,7 @@
     </div>
 
     <span class="descrizione" style="padding-top: 10px; padding-bottom: 10px;">
-      Non sappiamo ancora come e se potremo fare la festa.<br>Vi terremo aggiornati su eventuali sviluppi nelle prossime
-      settimane!
+      Ci tocca annullare la festa che avevamo previsto, ma siete  super benvenuti a casa nostra non appena sarà possibile!
     </span>
 
     <div class="mappa">
