--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -55,10 +55,11 @@
     <div class="card">
       <span class="cardTitle">FESTEGGIAMENTI</span>
       <mat-icon svgIcon="party"></mat-icon>
-      <span class="t1">Cascina Marinetta</span>
-      <span class="t2">Via Bergoglio, 56, 12062 Cherasco CN</span>
+      <span class="t1">Video</span>
+      <span class="t2">I nostri amici hanno realizzato due video per riportarci gli auguri di tutti quelli che, in qualsiasi modalità, ci erano vicini in questo importante momento. Ringraziandovi mettiamo il link in modo che possiate vederli anche voi!</span>
 
-      <a href="https://goo.gl/maps/yfgZiwV4a8xNbUpW6" class="button">Maps</a>
+      <a href="https://drive.google.com/drive/folders/1w2mqzbLQdQh57TjV1tCrxurB5aazRq4B?usp=sharing" class="button">Clicca Qui!</a>
+
 
     </div>
   </div>
