--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -48,15 +48,18 @@
     }
 
     .t1 {
+      padding-top: 2rem;
       font-size: 25px;
       text-align: center;
     }
 
     .t2 {
+      padding-top: 3rem;
       font-size: 22px;
       line-height: 25px;
       color: $gray1;
       text-align: center;
+      padding-bottom: 1.5rem;
     }
   }
 }
